--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "dependencies": {
     "@capacitor/android": "4.0.1",
     "@capacitor/app": "4.0.1",
+    "@capacitor/camera": "^4.0.1",
     "@capacitor/core": "4.0.1",
     "@capacitor/geolocation": "^4.0.1",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
+    "@ionic/pwa-elements": "^3.1.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
-    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "@mapbox/mapbox-gl-geocoder": "^2.3.0",
     "axios": "^0.27.2",
     "capacitor-native-settings": "^4.0.0",
     "core-js": "^3.6.5",
