--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@capacitor/haptics": "4.0.1",
     "@capacitor/ios": "4.0.1",
     "@capacitor/keyboard": "^4.0.1",
+    "@capacitor/local-notifications": "^4.1.0",
     "@capacitor/status-bar": "4.0.1",
     "@faker-js/faker": "^7.5.0",
     "@ionic-native/android-permissions": "^5.36.0",
@@ -32,6 +33,7 @@
     "core-js": "^3.6.5",
     "dotenv": "^16.0.2",
     "firebase": "^9.9.2",
+    "html2pdf.js": "^0.10.1",
     "ionicons": "^6.0.2",
     "mapbox-gl": "^2.9.2",
     "vue": "^3.2.21",
